# diesel_test

./: .gitignore  Cargo.toml
migrations/2021-02-16-184720_animals/: down.sql  up.sql
migrations/2021-02-17-193110_test/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/db/: mod.rs
